--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,14 @@
 {
-    "version": 2,
-    "rewrites": [
+    "builds": [
         {
-            "source": "/(.*)",
-            "destination": "/api"
+            "src": "./app/app.ts",
+            "use": "@vercel/node"
+        }
+    ],
+    "routes": [
+        {
+            "src": "/(.*)",
+            "dest": "/app/app.ts"
         }
     ]
 }
